Improved button functionality to reset grid

--- a/style.css
+++ b/style.css
@@ -1,17 +1,46 @@
 .grid-container{
-  margin: 0 auto;
+  margin: 15px auto;
   width: 960px;
   display: grid;
-  grid-template-columns: repeat(16, 1fr);
+  grid-template-columns: auto auto auto;
   background-color: lightgrey;
-  padding: 0px;
+  padding: 10px;
 }
 
 .grid-item {
   background-color: rgba(255, 255, 255, 0.4);
   border: 1px solid rgba(0, 0, 0, 0.2);
-  padding: 12px;
-  min-width: 15px;
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+
+#btn {
+  display: flex;
+  justify-content: center;
+}
+
+.button {
+  padding: 10px 10px;
+  font-size: 18px;
+  max-width: 150px;
+  cursor: pointer;
+  outline: none;
+  color: #FFFFFF;
+  background-color: #4B0082;
+  border: none;
+  border-radius: 12px;
+  box-shadow: 2px 5px #999;
+}
+
+.button:hover {
+  background-color: #9932CC
+}
+
+.button:active {
+  background-color: #4B0082;
+  box-shadow: 5px 5px #DCDCDC;
+  transform: translateY(3px);
 }
 
 h1 {
